[project]
name = "py-secscan"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"

[dependency-groups]
dev = [
    "pre-commit>=4.0.1",
    "ruff>=0.8.4",
]

[project.scripts]
py_secscan = "py_secscan:main"

[tool.uv.workspace]
members = ["py-secscan"]

[tool.uv]
package = true
environments = [
    "sys_platform == 'darwin'",
    "sys_platform == 'linux'",
]
